--- a/mosquitto/templates/svc.yaml
+++ b/mosquitto/templates/svc.yaml
@@ -12,6 +12,11 @@ spec:
   clusterIP: None
   ports:
   - name: headless
-    port: 1883
+    protocol: TCP
+    port: {{ .Values.service.port }}
+    targetPort: http
+    {{- if (and (eq .Values.service.type "NodePort") ...) }}
+    nodePort: {{ .Values.service.nodePort }}
+    {{- end }}    
   selector:
     app: {{ template "fullname" . }}
