--- a/mosquitto/templates/svc.yaml
+++ b/mosquitto/templates/svc.yaml
@@ -8,15 +8,12 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }} 
 spec:
-  type: ClusterIP
-  clusterIP: None
+  type: {{ .Values.service.type }}
   ports:
   - name: headless
     protocol: TCP
     port: {{ .Values.service.port }}
-    targetPort: http
-    {{- if (and (eq .Values.service.type "NodePort") ...) }}
+    targetPort: headless
     nodePort: {{ .Values.service.nodePort }}
-    {{- end }}    
   selector:
     app: {{ template "fullname" . }}
